hard-gists/a8c96f1aeb41393dadf6/run.log
=== Docker Run Log for a8c96f1aeb41393dadf6 ===
Started at: Mi 29. Okt 19:08:54 CET 2025

[2025-10-29 19:08:55] START: Running container for a8c96f1aeb41393dadf6
[2025-10-29 19:08:55] SUCCESS: Container 46e7299d045e8f04b2e01eba33923faedc163487900f6fd4a401d209a6e75104 started for a8c96f1aeb41393dadf6
=== Container logs for a8c96f1aeb41393dadf6 ===
  File "/snippet.py", line 37
    print 'Go to the following link in your browser:'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a8c96f1aeb41393dadf6 ===
[2025-10-29 19:08:57] INFO: Container 46e7299d045e8f04b2e01eba33923faedc163487900f6fd4a401d209a6e75104 has stopped
